@@ -258,6 +258,21 @@ class Service
 	}
 
     /**
+     * @param string $newName
+     */
+    public function API_setName($newName)
+    {
+        $c = findConnectorOrDie($this);
+        $path = $this->getXPath();
+
+        $url = "type=config&action=rename&xpath=$path&newname=$newName";
+
+        $c->sendRequest($url);
+
+        $this->setName($newName);
+    }
+
+    /**
      * @return string
      */
 	public function &getXPath()
